--- a/projetweb/Dockerfile
+++ b/projetweb/Dockerfile
@@ -12,3 +12,7 @@ RUN python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 COPY . .
+
+EXPOSE 5000
+
+CMD ["gunicorn", "-b", "0.0.0.0:5000", "app:app", "--reload"]
