--- a/projetweb/docker-compose.yml
+++ b/projetweb/docker-compose.yml
@@ -4,6 +4,8 @@ version: '3'
 services:
   mysql:
     image: mysql
+    ports:
+      - 3306:3306
     volumes:
       - db-data:/var/lib/mysql
     command: mysqld --default-authentication-plugin=mysql_native_password
@@ -20,15 +22,20 @@ services:
     environment:
       PMA_HOST: mysql
       UPLOAD_LIMIT: 64M
-  
+
   web:
     build:
       context: ./src
       dockerfile: ../Dockerfile
+    ports:
+      - "5000:5000"
     volumes:
       - ./src:/app
+    environment:
+      - FLASK_DEBUG=development
+      - DATABASE_URL=mysql://root@mysql:3306/rna
     depends_on:
-      - mysql
+      - db
 
 volumes:
   db-data:
